chandeliers-lus/tests/compile_fail/ui/causality/undeclared-var.rs
chandeliers_lus::decl! {
    node foo() returns (i: int);
    let i = absent; tel;
}

fn main() {}
